# cairn

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  bench-container-start.sh  cairn.sh  command_wrapper.sh  command_wrapper_no_bg.sh  docker-compose.yml  init.sh  install.sh  reset.sh  startup.sh  stop.sh  teardown.sh  tracer.py
.github/workflows/: benchmark.yml
benchmarks/: Dockerfile  clean.sh  plot.py  publish.sh  rattle-benchmark.sh  rattle-plot.py  requirements.txt  run.sh  tex.py
benchmarks/commands/gcc/4/: run.sh
benchmarks/commands/stress/1/: run.sh
benchmarks/stage_1/gcc/1/: run.txt
benchmarks/stage_1/ls/2/: run.sh
benchmarks/stage_2/gcc/2/: run.sh
benchmarks/stage_2/gcc/3/: macros.c  run.sh
cairn-cli/: Cargo.toml
cairn-cli/src/: app.rs  command.rs  error.rs  main.rs  util.rs
cairn-fuse/: Cargo.toml
cairn-fuse/src/: main.rs
fsatrace/: Cargo.toml
fsatrace/src/: command.rs  error.rs  main.rs  util.rs
fuse3/: .dockerignore  Dockerfile  install.sh  tracer.py
host/: Dockerfile
host_mnt/: clean.sh
mnt/: clean.sh  test.c
mountpoint/: a.out
research/libbigbro/: Dockerfile  install.sh
research/outrun/: README.md
research/strace/: Dockerfile  install.sh
research/try/: Dockerfile  install.sh
sandbox/: Dockerfile
simple-fs/: Cargo.toml
src/: app.rs  command.rs  error.rs  main.rs
