[package]
name = "cairn-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4", features = ["cargo"] }
env_logger = "0.10"
log = "0.4"
libc = "0.2"
time = "0.3"
fuser = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
