[package]
name = "simple-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.51"
log = "0.4.6"
memchr = "2"
page_size = "0.6.0"
smallvec = "1.6.1"
zerocopy = { version = "0.7", features = ["derive"] }
env_logger = "0.10"
clap = { version = "4.4", features = ["cargo", "derive"] }
bincode = "1.3.1"
serde = { version = "1.0.102", features = ["std", "derive"] }
tempfile = "3"
nix = { version = "0.27.1", features = ["poll", "fs"] }
fuser = "0.14.0"
